Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-38199

Optimizer Error with = SOME on UNIQUE Column Using Decimal/Integer Types

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.6, 10.11, 11.4, 11.8, 12.0.2, 12.1.2
    • 12.3.2
    • Optimizer
    • None
    • Unexpected results

    Description

      A query using the = SOME (or = ANY) operator produces an incorrect result when the subquery's column is an integer type (e.g., INT, BIGINT, or DECIMAL) with a UNIQUE index and is compared against a literal.

      drop TABLE IF EXISTS t6;
      CREATE TABLE t6 (c2 int);
      INSERT t6 () VALUES (1.009);
      SELECT (0.9 = SOME (SELECT t6.c2 FROM t6))FROM t6;
      -- 0
      drop TABLE IF EXISTS t6;
      CREATE TABLE t6 (c2 int UNIQUE);
      INSERT t6 () VALUES (1.009);
      SELECT (0.9 = SOME (SELECT t6.c2 FROM t6))FROM t6;
      -- 1
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              zzz5248 zzz5248
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5h
                  5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.