MDEV-38199 Optimizer Error with = SOME on UNIQUE Column Using Decimal/Integer Types

return 2 (= value was truncated) when a decimal or float number
was modified when stored in Field_long (= fractional part was lost).

This tells the optimizer that a number with a non-zero fractional
part cannot be found in an index over an integer field.